--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>My work in data analytics consists of extracting insights utilizing tools such as Microsoft Excel Tableau, SQL, and Python. Check out my <a href="#work">work</a>.</p>
+								<p>My work in data analytics consists of extracting pragmatic insights utilizing tools such as Microsoft Excel Tableau, SQL, and Python. Check out my <a href="#work">work</a>.</p>
 							
 							</article>
 
@@ -54,8 +54,12 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Building a data model in Excel to understand how adjusting compensation to employees affects company revenue <br><a href="putlinkhere">HR Compensation Toola></p>
-								<p>Discovering what factors impact rental car net revenue and how adjusting vehicle costs can impact yearly revenue <br><a href="putlinkhere">Rental Car Profit Model</a></p>
+								<p>Conducting an independent research study to understand why students leave the honors college at Arizona State University <br><a href="https://drive.google.com/open?id=1PyEDcWW8GSFpTsx2YCuI_mkGc8ZXsNbX">Assessing Attrition of Students within Barrett, the Honors College</a></p>
+								<p>Building a data model in Excel to understand how adjusting compensation to employees affects company revenue <br><a href="https://drive.google.com/open?id=1ofPmk_B9xzcS4V0HJT82lA_DuHSKPIzo">HR Compensation Tool</a></p>
+								<p>Discovering what factors impact rental car net revenue and how adjusting vehicle costs can impact yearly revenue <br><a href="https://drive.google.com/open?id=1LOA-67DhPwp2VVe6WWM2L4IwR-Ds3Qlh">Rental Car Profit Model</a></p>
+								<p>Extracting insight from a vehicle dataset showing how vehicle components impact car mpg  <br><a href="https://drive.google.com/open?id=16qoeon29AknkHEPQWLC7L5FsL9NQhpLU">EPA Fuel Economy</a></p>
+								<p>Creating a web scraper to delininate web articles and authors on Space.com  <br><a href="https://colab.research.google.com/drive/1IC-gctI8tOmWlSRwRJq8hS3vRKLrQUw8">Space web scraper</a></p>
+								<p>Investigating a City of Phoenix Crime API to understand how location influences crime <br><a href="https://drive.google.com/open?id=1QiyezLIPUtq0XuIGx8Bpmu5Fo2JdfyqR">City of Phoenix Crime API</a></p>
 							</article>
 
 						<!-- About -->
