--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 								<p>Extracting insight from a vehicle dataset showing how vehicle components impact car mpg  <br><a href="https://drive.google.com/open?id=16qoeon29AknkHEPQWLC7L5FsL9NQhpLU">EPA Fuel Economy</a></p>
 								<p>Creating a web scraper to delininate web articles and authors on Space.com  <br><a href="https://colab.research.google.com/drive/1IC-gctI8tOmWlSRwRJq8hS3vRKLrQUw8">Space web scraper</a></p>
 								<p>Investigating a City of Phoenix Crime API to understand how location influences crime <br><a href="https://drive.google.com/open?id=1QiyezLIPUtq0XuIGx8Bpmu5Fo2JdfyqR">City of Phoenix Crime API</a></p>
+								<p>Creating an interactive Excel dashboard through pivot tables to illustrate how time, location, and sales categories influence company profit <br><a href="https://drive.google.com/open?id=1O-1YBP0XoKbsXW5fLIyNhNef3LgYuv1V">Superstore Sales KPI Dashboard</a></p>
 							</article>
 
 						<!-- About -->
