--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>My work in data analytics consists of extracting pragmatic insights utilizing tools such as Microsoft Excel Tableau, SQL, and Python. Check out my <a href="#work">work</a>.</p>
+								<p> Having graduated college with a degree in Psychology, I have always been curious about understanding human behavior, decision-making, and motivation on a much deeper level. My curiosity for Psychology has since flourished into a passion for data because it allows me to better understand the complexity behind human-driven action using tools like Excel, SQL relational databases, Tableau, and Python. Check out my <a href="#work">work</a>.</p>
 							
 							</article>
 
@@ -67,7 +67,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>I am currently a claims adjuster working for Turo Inc. with an uncommon passion for all things quantitative and measurable. I also have a deep love for learning, problem-solving, and challenges. </p>
+								<p>I am a data analyst currently pursuing data-centric opportunities. I have a deep love for learning, problem-solving, and challenge with interests in ergonomics, institutional attrition, qualitative thematic analysis, and studying irrational decision making. </p>
 							</article>
 
 						<!-- Contact -->
