--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>I am a data analyst currently pursuing data-centric opportunities. I have a deep love for learning, problem-solving, and challenge with interests in ergonomics, institutional attrition, qualitative thematic analysis, and studying irrational decision making. </p>
+								<p>Data analyst, U.S. Marine, and former operations associate with strong problem-solving, troubleshooting, team-building, and leadership experience. I am most excited to learn about teams' perspectives on decision making, user attrition, and qualitative data analysis methods. When I'm not wandering the realm of data I can be found reading psychology non-fiction, writing in a journal, playing team-based video games, or pursuing a fitness goal. I am very open to new connections and conversation so if you would like to chat, please feel free to reach out!</p>
 							</article>
 
 						<!-- Contact -->
