--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#About Me">About</a></li>
+								<li><a href="#Problem Solver">Work</a></li>
+								<li><a href="#Amateur Creative">Create</a></li>
+								<li><a href="#Open Door">Open</a></li>
+								<li><a href="#Contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -42,33 +43,67 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">Intro</h2>
+						<!-- About -->
+							<article id="About Me">
+								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p> Having graduated college with a degree in Psychology, I have always been curious about understanding human behavior, decision-making, and motivation on a much deeper level. My curiosity for Psychology has since flourished into a passion for data because it allows me to better understand the complexity behind human-driven action using tools like Excel, SQL relational databases, Tableau, and Python. Check out my <a href="#work">work</a>.</p>
+								<p> My name is Gilbert and I am most passionate about problem solving through data and creativity.  I began my career in the United States Marine Corps while also majoring in Psychology at the Barrett Honors College at Arizona State University.  At the start of COVID lockdown, I was able to transition my career into data by completing an analytics coding camp and have since been able to achieve my goal of having a career working with data. I currently work remotely as a Business Analyst for Pennymac LLC, enabling leaders in the company to make strategic decisions that positively impact customer experience, financial gain, and internal growth.  Among my many skills, I primarily use Excel, SQL relational databases, Tableau, and Python to explore and solve the many problems that arise when working with large datasets.</p>
+								<p> When I'm not working with data I take great enjoyment in trying new creative pursuits of all types. I believe that art and creativity not only increase the quality of life, but also can also expand different avenues of approaching real-world problems. Specifically, in creating art you are challenging yourself on how you approach learning, and how you can be resourceful in order to achieve the end product that you envision. Some examples of ventures that I've adopted are digital illustration, podcasting, video production, and photography --all of which I never previously thought I was capable of.</p>
+								<p> Lastly, I try to adopt the core values of curiosity, adaptability, and approachability in and out of the workplace. Curiosity enables me to be open to learning and figuring out solutions to any problem. Adaptability causes me to be open to growth and change, regardless of if that growth and change are within my own personal control. Approachability is also vital because it allows me to embrace diversity in others and be both a friend and resource to others.</p>
+								<p> I love getting to know new people and having engaging conversations about whatever you are passionate about. If you have any questions or want to connect, please feel free to <a href="#Contact">reach out!</a>.</p>
 							
 							</article>
 
 						<!-- Work -->
-							<article id="work">
+							<article id="Problem Solver">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Conducting an independent research study to understand why students leave the honors college at Arizona State University <br><a href="https://drive.google.com/open?id=1PyEDcWW8GSFpTsx2YCuI_mkGc8ZXsNbX">Assessing Attrition of Students within Barrett, the Honors College</a></p>
-								<p>Building a data model in Excel to understand how adjusting compensation to employees affects company revenue <br><a href="https://drive.google.com/open?id=1ofPmk_B9xzcS4V0HJT82lA_DuHSKPIzo">HR Compensation Tool</a></p>
-								<p>Discovering what factors impact rental car net revenue and how adjusting vehicle costs can impact yearly revenue <br><a href="https://drive.google.com/open?id=1LOA-67DhPwp2VVe6WWM2L4IwR-Ds3Qlh">Rental Car Profit Model</a></p>
-								<p>Extracting insight from a vehicle dataset showing how vehicle components impact car mpg  <br><a href="https://drive.google.com/open?id=16qoeon29AknkHEPQWLC7L5FsL9NQhpLU">EPA Fuel Economy</a></p>
-								<p>Creating a web scraper to delininate web articles and authors on Space.com  <br><a href="https://colab.research.google.com/drive/1IC-gctI8tOmWlSRwRJq8hS3vRKLrQUw8">Space web scraper</a></p>
-								<p>Investigating a City of Phoenix Crime API to understand how location influences crime <br><a href="https://drive.google.com/open?id=1QiyezLIPUtq0XuIGx8Bpmu5Fo2JdfyqR">City of Phoenix Crime API</a></p>
-								<p>Creating an interactive Excel dashboard through pivot tables to illustrate how time, location, and sales categories influence company profit <br><a href="https://drive.google.com/open?id=1O-1YBP0XoKbsXW5fLIyNhNef3LgYuv1V">Superstore Sales KPI Dashboard</a></p>
+								<p> I have a range of skills and proficiency with analytical tools to discover insights and provide pragmatic solutions to problems. A recent project where I demonstrated these skills were part of a workforce data analysis to understand how Underwriter hours affected productivity constraints at Pennymac. By extracting data through Excel and SQL relational databases, I was able to measure inflow of loans within the customer pipeline, and compare this to a standardized list of available Underwriters. By doing so, myself and my team members were able to discover which hours were severely lacking available Underwriters and could suggest practical solutions for moving working hours to meet the pipeline demand.</p>
+								<p> Some important skills and methods to highlight:<p>
+								<ul>
+  									<li>Data manipulation</li>
+  									<li>Data mining and analysis</li>
+  									<li>Probability and statistics</li>
+  									<li>Data visualization</li>
+  									<li>Data reporting</li>
+  									<li>Dashboarding</li>
+  									<li>Workflow automation</li>
+								</ul> 
+
 							</article>
 
-						<!-- About -->
-							<article id="about">
-								<h2 class="major">About</h2>
+						<!-- Create -->
+							<article id="Amateur Creative">
+								<h2 class="major">Create</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Data analyst, U.S. Marine, and former operations associate with strong problem-solving, troubleshooting, team-building, and leadership experience. I am most excited to learn about teams' perspectives on decision making, user attrition, and qualitative data analysis methods. When I'm not wandering the realm of data I can be found reading psychology non-fiction, writing in a journal, playing team-based video games, or pursuing a fitness goal. I am very open to new connections and conversation so if you would like to chat, please feel free to reach out!</p>
+								<p> I find enjoyment in expanding my creative horizons by trying new tools and mediums that I have never been exposed to in the past. My podcast, Between the Soup, for instance, is aimed at interviewing individuals to learn about the experiences unique to them. From speaking with a variety of guests on topics like data, creativity, work/life balance, psychology, and more, I am able to strengthen relationships with others and bring awareness to insights and ideas that I may not have known otherwise.</p>
+								<p> Some important skills to highlight:<p>								
+								<ul>
+  									<li>Audio editing</li>
+  									<li>Audio enhancement</li>
+  									<li>Graphic design</li>
+  									<li>Digital illustration</li>
+  									<li>Video editing</li>
+  									<li>Visual storytelling</li>
+  									<li>Social media Engagement</li>
+								</ul>
 							</article>
+
+						<!-- Open Door -->
+							<article id="Open Door">
+								<h2 class="major">Open</h2>
+								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<p> I love working collaboratively and getting to know my coworkers so that both work and play are meaningful. I believe that having a close connection with others not only makes day-to-day challenges more enjoyable, but it also can make achieving a personal or company goal quicker and easier. Some of the ways that I love to get to know others are through sharing memes, food and music recommendations, and conversation beyond small talk.</p>
+								<p> Some important skills and qualities to highlight:<p>								
+								<ul>
+  									<li>Confident leadership</li>
+  									<li>Effective verbal and written communication</li>
+  									<li>Emotional intelligence</li>
+  									<li>Digital illustration</li>
+  									<li>Approachability</li>
+								</ul>
+							</article>
+
 
 						<!-- Contact -->
 							<article id="contact">
