--- a/index.html
+++ b/index.html
@@ -110,10 +110,9 @@
 								<h2 class="major">Contact</h2>
 								
 								<ul class="icons">
-									
+									<li><a href="gilbert.x.sanchez@gmail.com" class="icon fa-envelop"><span class="label">Email</span></a></li>
 									<li><a href="https://www.linkedin.com/in/gilbert-x-sanchez/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/gilbertxsanchez/github.io" class="icon fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://public.tableau.com/profile/gilbert.sanchez#!/" class="icon fa-plus"><span class="label">Tableau</span></a></li>
+
 								</ul>
 							</article>
 
