--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
 								<h2 class="major">Contact</h2>
 								
 								<ul class="icons">
-									<li><a href="gilbert.x.sanchez@gmail.com" class="icon fa-envelop"><span class="label">Email</span></a></li>
-									<li><a href="https://www.linkedin.com/in/gilbert-x-sanchez/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li>LinkedIn <a href="https://www.linkedin.com/in/gilbert-x-sanchez/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 
 								</ul>
 							</article>
