--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
 								</ul>
 							</article>
 
-
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								
 								<ul class="icons">
-									<li>LinkedIn <a href="https://www.linkedin.com/in/gilbert-x-sanchez/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a class="icon fa-envelope"><span class="label">Email</span></a> gilbert.x.sanchez@gmail.com</li>
+									<li><a href="https://www.linkedin.com/in/gilbert-x-sanchez/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a> LinkedIn</li>
 
 								</ul>
 							</article>
