--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/hs1.jpg" alt="Headshot" /></span>
 								<p> My name is Gilbert and I am most passionate about problem solving through data and creativity.  I began my career in the United States Marine Corps while also majoring in Psychology at the Barrett Honors College at Arizona State University.  At the start of COVID lockdown, I was able to transition my career into data by completing an analytics coding camp and have since been able to achieve my goal of having a career working with data. I currently work remotely as a Business Analyst for Pennymac LLC, enabling leaders in the company to make strategic decisions that positively impact customer experience, financial gain, and internal growth.  Among my many skills, I primarily use Excel, SQL relational databases, Tableau, and Python to explore and solve the many problems that arise when working with large datasets.</p>
-								<p> When I'm not working with data I take great enjoyment in trying new creative pursuits of all types. I believe that art and creativity not only increase the quality of life, but also can also expand different avenues of approaching real-world problems. Specifically, in creating art, you are challenging yourself on how you approach learning and how you can be resourceful in order to achieve the end product that you envision. Some examples of ventures that I've adopted are digital illustration, podcasting, video production, and photography --all of which I never previously thought I was capable of.</p>
+								<p> When I'm not working with data I take great enjoyment in trying new creative pursuits of all types. I believe that art and creativity not only increase the quality of life, but also can also expand different avenues of approaching real-world problems. Specifically, in creating art you are challenging yourself on how you approach learning, and how you can be resourceful in order to achieve the end product that you envision. Some examples of ventures that I've adopted are digital illustration, podcasting, video production, and photography --all of which I never previously thought I was capable of.</p>
 								<p> Lastly, I try to adopt the core values of curiosity, adaptability, and approachability in and out of the workplace. Curiosity enables me to be open to learning and figuring out solutions to any problem. Adaptability causes me to be open to growth and change, regardless of if that growth and change are within my own personal control. Approachability is also vital because it allows me to embrace diversity in others and be both a friend and resource to others.</p>
 								<p> I love getting to know new people and having engaging conversations about whatever you are passionate about. If you have any questions or want to connect, please feel free to <a href="#contact">reach out!</a>.</p>
 							
@@ -57,7 +57,7 @@
 						<!-- Problem Solver -->
 							<article id="problem">
 								<h2 class="major">Problem Solver</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/ps.jpg" alt="Data Icons" /></span>
 								<p> I have a range of skills and proficiency with analytical tools to discover insights and provide pragmatic solutions to problems. A recent project where I demonstrated these skills were part of a workforce data analysis to understand how Underwriter hours affected productivity constraints at Pennymac. By extracting data through Excel and SQL relational databases, I was able to measure inflow of loans within the customer pipeline, and compare this to a standardized list of available Underwriters. By doing so, myself and my team members were able to discover which hours were severely lacking available Underwriters and could suggest practical solutions for moving working hours to meet the pipeline demand.</p>
 								<p> Some important skills and methods to highlight:<p>
 								<ul>
@@ -75,7 +75,7 @@
 						<!-- Amateur Creative -->
 							<article id="amateur">
 								<h2 class="major">Amateur Creative</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/ac.jpg" alt="Creative Icons" /></span>
 								<p> I find enjoyment in expanding my creative horizons by trying new tools and mediums that I have never been exposed to in the past. My podcast, Between the Soup, for instance, is aimed at interviewing individuals to learn about the experiences unique to them. From speaking with a variety of guests on topics like data, creativity, work/life balance, psychology, and more, I am able to strengthen relationships with others and bring awareness to insights and ideas that I may not have known otherwise.</p>
 								<p> Some important skills to highlight:<p>								
 								<ul>
@@ -92,7 +92,7 @@
 						<!-- Open Door -->
 							<article id="open">
 								<h2 class="major">Open Door</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="od.jpg" alt="Social Icons" /></span>
 								<p> I love working collaboratively and getting to know my coworkers so that both work and play are meaningful. I believe that having a close connection with others not only makes day-to-day challenges more enjoyable, but it also can make achieving a personal or company goal quicker and easier. Some of the ways that I love to get to know others are through sharing memes, food and music recommendations, and conversation beyond small talk.</p>
 								<p> Some important skills and qualities to highlight:<p>								
 								<ul>
@@ -103,6 +103,7 @@
   									<li>Approachability</li>
 								</ul>
 							</article>
+
 
 						<!-- Contact -->
 							<article id="contact">
