--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 						<!-- Open Door -->
 							<article id="open">
 								<h2 class="major">Open Door</h2>
-								<span class="image main"><img src="od.jpg" alt="Social Icons" /></span>
+								<span class="image main"><img src="images/od.jpg" alt="Social Icons" /></span>
 								<p> I love working collaboratively and getting to know my coworkers so that both work and play are meaningful. I believe that having a close connection with others not only makes day-to-day challenges more enjoyable, but it also can make achieving a personal or company goal quicker and easier. Some of the ways that I love to get to know others are through sharing memes, food and music recommendations, and conversation beyond small talk.</p>
 								<p> Some important skills and qualities to highlight:<p>								
 								<ul>
