--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 							<article id="about">
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/hs1.jpg" alt="Headshot" /></span>
-								<p> My name is Gilbert and I am most passionate about problem solving through data and creativity.  I began my career in the United States Marine Corps while also majoring in Psychology at the Barrett Honors College at Arizona State University.  At the start of COVID lockdown, I was able to transition my career into data by completing an analytics coding camp and have since been able to achieve my goal of having a career working with data. I currently work remotely as a Business Analyst for Pennymac LLC, enabling leaders in the company to make strategic decisions that positively impact customer experience, financial gain, and internal growth.  Among my many skills, I primarily use Excel, SQL relational databases, Tableau, and Python to explore and solve the many problems that arise when working with large datasets.</p>
-								<p> When I'm not working with data I take great enjoyment in trying new creative pursuits of all types. I believe that art and creativity not only increase the quality of life, but also can also expand different avenues of approaching real-world problems. Specifically, in creating art you are challenging yourself on how you approach learning, and how you can be resourceful in order to achieve the end product that you envision. Some examples of ventures that I've adopted are digital illustration, podcasting, video production, and photography --all of which I never previously thought I was capable of.</p>
+								<p> My name is Gilbert and I am most passionate about problem solving through data and creativity.  I began my career in the United States Marine Corps while also majoring in Psychology at the Barrett Honors College at Arizona State University.  At the start of COVID lockdown, I was able to transition my career from operations into analytics and achieve my goal of working with data. Among my many skills, I primarily use Excel, SQL relational databases, Tableau, and Python to explore and solve the many problems that arise when working with large datasets.</p>
+								<p> When I'm not working with data I take great enjoyment in trying new creative pursuits of all types. I believe that art and creativity not only increase the quality of life, but also can also expand different avenues of approaching real-world problems. Specifically, in creating art you are challenging yourself on how you approach learning, and how you can be resourceful in order to achieve the end product that you envision. Some examples of ventures that I've adopted are digital illustration, podcasting, video production, and photography--all of which I never previously thought I was capable of.</p>
 								<p> Lastly, I try to adopt the core values of curiosity, adaptability, and approachability in and out of the workplace. Curiosity enables me to be open to learning and figuring out solutions to any problem. Adaptability causes me to be open to growth and change, regardless of if that growth and change are within my own personal control. Approachability is also vital because it allows me to embrace diversity in others and be both a friend and resource to others.</p>
 								<p> I love getting to know new people and having engaging conversations about whatever you are passionate about. If you have any questions or want to connect, please feel free to <a href="#contact">reach out!</a>.</p>
 							
@@ -58,15 +58,14 @@
 							<article id="problem">
 								<h2 class="major">Problem Solver</h2>
 								<span class="image main"><img src="images/ps.jpg" alt="Data Icons" /></span>
-								<p> I have a range of skills and proficiency with analytical tools to discover insights and provide pragmatic solutions to problems. A recent project where I demonstrated these skills were part of a workforce data analysis to understand how Underwriter hours affected productivity constraints at Pennymac. By extracting data through Excel and SQL relational databases, I was able to measure inflow of loans within the customer pipeline, and compare this to a standardized list of available Underwriters. By doing so, myself and my team members were able to discover which hours were severely lacking available Underwriters and could suggest practical solutions for moving working hours to meet the pipeline demand.</p>
+								<p> I have a range of skills and proficiency with analytical tools to discover insights and provide pragmatic solutions to problems. A recent project where I demonstrated these skills were part of a workforce data analysis to understand how Home Loan Underwriter hours affected productivity constraints. By extracting data through Excel and SQL relational databases, I was able to measure inflow of loans within the customer pipeline, and compare this to a standardized list of available Underwriters. By doing so, myself and my team members were able to discover which hours were severely lacking available Underwriters and could suggest practical solutions for moving working hours to meet the pipeline demand.</p>
 								<p> Some important skills and methods to highlight:<p>
 								<ul>
-  									<li>Data manipulation</li>
-  									<li>Data mining and analysis</li>
+  									<li>Data manipulation, cleaning, and validation</li>
+  									<li>Quantitative and QUalitative Analysis</li>
   									<li>Probability and statistics</li>
-  									<li>Data visualization</li>
+  									<li>Dashboarding and Visualization</li>
   									<li>Data reporting</li>
-  									<li>Dashboarding</li>
   									<li>Workflow automation</li>
 								</ul> 
 
