--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<p> Some important skills and methods to highlight:<p>
 								<ul>
   									<li>Data manipulation, cleaning, and validation</li>
-  									<li>Quantitative and QUalitative Analysis</li>
+  									<li>Quantitative and Qualitative Analysis</li>
   									<li>Probability and statistics</li>
   									<li>Dashboarding and Visualization</li>
   									<li>Data reporting</li>
