--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
 							<article id="about">
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/hs1.jpg" alt="Headshot" /></span>
-								<p> My name is Gilbert and I am most passionate about problem solving through data and creativity.  I began my career in the United States Marine Corps while also majoring in Psychology at the Barrett Honors College at Arizona State University.  At the start of COVID lockdown, I was able to transition my career from operations into analytics and achieve my goal of working with data. Among my many skills, I primarily use Excel, SQL relational databases, Tableau, and Python to explore and solve the many problems that arise when working with large datasets.</p>
-								<p> When I'm not working with data I take great enjoyment in trying new creative pursuits of all types. I believe that art and creativity not only increase the quality of life, but also can also expand different avenues of approaching real-world problems. Specifically, in creating art you are challenging yourself on how you approach learning, and how you can be resourceful in order to achieve the end product that you envision. Some examples of ventures that I've adopted are digital illustration, podcasting, video production, and photography--all of which I never previously thought I was capable of.</p>
-								<p> Lastly, I try to adopt the core values of curiosity, adaptability, and approachability in and out of the workplace. Curiosity enables me to be open to learning and figuring out solutions to any problem. Adaptability causes me to be open to growth and change, regardless of if that growth and change are within my own personal control. Approachability is also vital because it allows me to embrace diversity in others and be both a friend and resource to others.</p>
+								<p> My name is Gilbert and I am a business analytics professional most passionate about problem-solving, creativity, and interpersonal connection.</p>
+								<p> I began my career as a customer-facing operations professional and quickly transitioned my career into data analytics at the start of the COVID-19 lockdown. Since then, I have been able to join both experiences that provide a unique firsthand perspective to data-driven business insights.</p>
 								<p> I love getting to know new people and having engaging conversations about whatever you are passionate about. If you have any questions or want to connect, please feel free to <a href="#contact">reach out!</a>.</p>
 							
 							</article>
@@ -58,15 +57,14 @@
 							<article id="problem">
 								<h2 class="major">Problem Solver</h2>
 								<span class="image main"><img src="images/ps.jpg" alt="Data Icons" /></span>
-								<p> I have a range of skills and proficiency with analytical tools to discover insights and provide pragmatic solutions to problems. A recent project where I demonstrated these skills were part of a workforce data analysis to understand how Home Loan Underwriter hours affected productivity constraints. By extracting data through Excel and SQL relational databases, I was able to measure inflow of loans within the customer pipeline, and compare this to a standardized list of available Underwriters. By doing so, myself and my team members were able to discover which hours were severely lacking available Underwriters and could suggest practical solutions for moving working hours to meet the pipeline demand.</p>
-								<p> Some important skills and methods to highlight:<p>
+								<p> I am able to provide end-to-end data analysis that ranges from data gathering and cleaning all the way to executive-level presentation in order to communicate business recommendations.</p>
+								<p> Some of the skills and tools that I use to achieve this are:<p>
 								<ul>
-  									<li>Data manipulation, cleaning, and validation</li>
-  									<li>Quantitative and Qualitative Analysis</li>
-  									<li>Probability and statistics</li>
-  									<li>Dashboarding and Visualization</li>
-  									<li>Data reporting</li>
-  									<li>Workflow automation</li>
+  									<li>Spreadsheets (Google Sheets, MS Excel)</li>
+  									<li>SQL Relational Databases (Snowflake, AWS Redshift, MS SQL Server)</li>
+  									<li>BI & Visualization Tools (Looker, Tableau, Power BI, Amplitude, Domo)</li>
+  									<li>Coding Languages (Python, JavaScript)</li>
+  									<li>Statistical testing ( Correlation, T-test, ANOVA)</li>
 								</ul> 
 
 							</article>
@@ -75,16 +73,13 @@
 							<article id="amateur">
 								<h2 class="major">Amateur Creative</h2>
 								<span class="image main"><img src="images/ac.jpg" alt="Creative Icons" /></span>
-								<p> I find enjoyment in expanding my creative horizons by trying new tools and mediums that I have never been exposed to in the past. My podcast, Between the Soup, for instance, is aimed at interviewing individuals to learn about the experiences unique to them. From speaking with a variety of guests on topics like data, creativity, work/life balance, psychology, and more, I am able to strengthen relationships with others and bring awareness to insights and ideas that I may not have known otherwise.</p>
-								<p> Some important skills to highlight:<p>								
+								<p> I find enjoyment in expanding my creative horizons by trying new tools and mediums that I have never been exposed to in the past. I believe that art and creativity not only increase the quality of life but also can also expand different avenues of approaching real-world problems.</p>
+								<p> Some of the skills and tools I use creatively are:<p>								
 								<ul>
-  									<li>Audio editing</li>
-  									<li>Audio enhancement</li>
-  									<li>Graphic design</li>
-  									<li>Digital illustration</li>
-  									<li>Video editing</li>
-  									<li>Visual storytelling</li>
-  									<li>Social media Engagement</li>
+  									<li>Digital Audio Workstations (Audacity, Audition, Reaper)</li>
+  									<li>Digital Illustration/Graphic Design (Krita, Photoshop, Adobe Illustrator, GIMP)</li>
+  									<li>Video Editing (Shotcut, Adobe Premier, DaVinci Resolve)</li>
+  									<li>Social Media (YouTube, Discord, Instagram, Spotify for Podcasters, Twitch)</li>
 								</ul>
 							</article>
 
